[package]
name = "courier"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["cargo"] }
log = { version = "0.4" }
env_logger = "0.11"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
tokio = { version = "1", features = ["full"] }
tap = "1"
teloxide = { version = "0.13", default-features = false, features = [
    "macros",
    "rustls",
    "ctrlc_handler",
] }
barcoders = { version = "2.0.0", features = ["image"] }
image = "0.25.4"
regex = "1"
