[package]
name = "courier"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
barcoders = { version = "2.0.0", features = ["image"] }
chrono = "0.4"
clap = { version = "4", features = ["cargo"] }
env_logger = "0.11"
image = "0.25.4"
imageproc = "0.25.0"
kstool = "0.2"
log = { version = "0.4" }
regex = "1"
serde = { version = "1", features = ["derive"] }
tap = "1"
teloxide = { version = "0.13", default-features = false, features = [
    "macros",
    "rustls",
    "ctrlc_handler",
] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
